--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=backend
 
-spring.datasource.url=jdbc:postgresql://dpg-cu2p9i3qf0us73bqmam0-a.frankfurt-postgres.render.com/inventar_o5gp
-spring.datasource.username =inventar_o5gp_user
-spring.datasource.password =KHQvoHMgMFgMYEtyAk6y4AbGxjzMFIxl
+#spring.datasource.url=jdbc:postgresql://dpg-cu2p9i3qf0us73bqmam0-a.frankfurt-postgres.render.com/inventar_o5gp
+#spring.datasource.username=inventar_o5gp_user
+#spring.datasource.password=KHQvoHMgMFgMYEtyAk6y4AbGxjzMFIxl
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/InventarDataBase
+spring.datasource.username=sail
+spring.datasource.password=123456789
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = update
