--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.application.name=backend
 #spring.datasource.username=inventar_o5gp_user
 #spring.datasource.password=KHQvoHMgMFgMYEtyAk6y4AbGxjzMFIxl
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/InventarDataBase
-spring.datasource.username=sail
+spring.datasource.url=jdbc:postgresql://localhost:5432/inventarbaza
+spring.datasource.username=luka
 spring.datasource.password=123456789
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
