--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=backend
 
+server.address=0.0.0.0
+server.port=8080
+
+#spring.mvc.cors.allowed-origins=https://test.hr
+
 #spring.datasource.url=jdbc:postgresql://dpg-cu2p9i3qf0us73bqmam0-a.frankfurt-postgres.render.com/inventar_o5gp
 #spring.datasource.username=inventar_o5gp_user
 #spring.datasource.password=KHQvoHMgMFgMYEtyAk6y4AbGxjzMFIxl
